# HandsomeSoup

./: .gitignore  HandsomeSoup.cabal  HandsomeSoup.hs  LICENSE  LIST_OF_SUPPORTED_SELECTORS.markdown  Main.hs  README.markdown  TODO.markdown  index.html  makefile  params.json  test.html
Text/: HandsomeSoup.hs
Text/CSS/: Parser.hs
examples/: GoogleSearch.hs
src/Text/: HandsomeSoup.hs
src/Text/CSS/: Parser.hs  Utils.hs
tests/: AllTests.hs  test.html
