Name:               HandsomeSoup
Version:            0.3.2
Synopsis:           Work with HTML more easily in HXT
Description:        See examples and full readme on the Github page: https:\/\/github.com\/egonSchiele\/HandsomeSoup
Homepage:           https://github.com/egonSchiele/HandsomeSoup
License:            BSD3
License-file:       LICENSE
Author:             Aditya Bhargava
Maintainer:         bluemangroupie@gmail.com
Category:           Text
Build-type:         Simple
Cabal-version:      >=1.2

Extra-source-files: README.markdown

library
  Exposed-modules:    Text.HandsomeSoup
                    , Text.CSS.Parser
  Other-modules:      Text.CSS.Utils
  Build-depends:      base             < 5
                    , transformers
                    , HTTP
                    , parsec
                    , containers
                    , mtl
                    , MaybeT
                    , hxt
                    , network
                    , network-uri
                    , hxt-http

executable handsomesoup
  main-is:         Main.hs
  Build-depends:   base          < 5
                 , transformers
                 , HTTP
                 , parsec
                 , containers
                 , mtl
                 , MaybeT
                 , hxt
                 , network
                 , network-uri
                 , hxt-http

